# oanda-rest-api

./: CONTRIBUTING.rst  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml  on-release-main.yml
tests/: test_foo.py
